--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "amarya-admin-backend",
   "version": "1.0.0",
@@ -7,11 +6,11 @@
   "scripts": {
     "start": "node app.js"
   },
-
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-validator": "^7.0.1"
+    "express-validator": "^7.0.1",
+    "mysql2": "^3.6.5"
   }
 }
