--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "amarya-admin-backend-code",
   "type": "module",
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -13,6 +13,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.6.5"
+    "mysql2": "^3.6.5",
+    "nodemon": "^3.0.2"
   }
 }
