--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment-timezone": "^0.5.45",
     "mysql2": "^3.6.5",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.0.2",
     "xlsx-populate": "^1.21.0"
   }
