--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "fs": "^0.0.1-security",
     "googleapis": "^134.0.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
