--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cloudinary": "^2.2.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
