--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "amarya-admin-backend-code",
   "type": "module",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "child-process": "^1.0.2",
     "cloudinary": "^2.2.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -15,9 +16,11 @@
     "dotenv": "^16.3.1",
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
+    "fluent-ffmpeg": "^2.1.3",
     "fs": "^0.0.1-security",
     "googleapis": "^134.0.0",
     "helmet": "^7.1.0",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
@@ -28,6 +31,8 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.0.2",
+    "socket.io": "^4.7.5",
+    "stream": "^0.0.3",
     "xlsx-populate": "^1.21.0"
   }
 }
