--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
     "fluent-ffmpeg": "^2.1.3",
+    "ffmpeg-static": "^4.4.0",
     "fs": "^0.0.1-security",
     "googleapis": "^134.0.0",
     "helmet": "^7.1.0",
