--- a/environment.yml
+++ b/environment.yml
@@ -74,7 +74,8 @@ dependencies:
       - networkx==3.3
       - ninja==1.11.1.1
       - nncf==2.10.0
-      - opencv-python==4.9.0.80
+      - opencv-python-headless
+      - opencv-contrib-python
       - openvino==2024.1.0
       - openvino-telemetry==2024.1.0
       - orjson==3.10.3
