--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
 version: "3"
-
 services:
   nodeapp:
     container_name: nodeappcontainer
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile.node  # Specify the Dockerfile for Node.js
     image: nodeapp:v1
     restart: always
     command: ["sh", "-c", "node app.js"]
@@ -33,5 +34,17 @@ services:
     networks:
       - internalnet
 
-networks: 
+  pythonapp:
+    container_name: pythonappcontainer
+    build:
+      context: .
+      dockerfile: Dockerfile.python  # Specify the Dockerfile for Python
+    image: pythonapp:v1
+    restart: always
+    command: ["conda", "run", "-n", "conda_env", "python", "script.py"]
+    networks:
+      - internalnet
+
+networks:
   internalnet:
+
