--- a/environment.yml
+++ b/environment.yml
@@ -1,135 +1,27 @@
 name: conda_env
 channels:
   - defaults
+  - conda-forge  # Added channel for additional packages
 dependencies:
   - python=3.10  # Adjust the Python version if needed
   - flask
   - numpy=1.25.2
   - scipy=1.13.0
   - pandas=2.2.2
-  - pip  # Include pip to install additional packages
+  - pip
   - pip:
-      - ultralytics
-      - flask-socketio
-      - about-time==4.2.1
-      - aiofiles==23.2.1
-      - alive-progress==3.1.5
-      - altair==5.3.0
-      - annotated-types==0.6.0
-      - anyio==4.3.0
-      - asttokens==2.4.1
-      - attrs==23.2.0
-      - autograd==1.6.2
-      - certifi==2024.2.2
-      - charset-normalizer==3.3.2
-      - click==8.1.7
-      - cma==3.2.2
-      - colorama==0.4.6
-      - comm==0.2.2
-      - contourpy==1.2.1
-      - cycler==0.12.1
-      - decorator==5.1.1
-      - Deprecated==1.2.14
-      - dill==0.3.8
-      - dnspython==2.6.1
-      - email_validator==2.1.1
-      - exceptiongroup==1.2.1
-      - executing==2.0.1
-      - fastapi==0.111.0
-      - fastapi-cli==0.0.2
-      - ffmpeg==1.4
-      - ffmpy==0.3.2
-      - filelock==3.14.0
-      - fonttools==4.51.0
-      - fsspec==2024.3.1
-      - future==1.0.0
-      - gradio==4.29.0
-      - gradio_client==0.16.1
-      - grapheme==0.6.0
-      - h11==0.14.0
-      - httpcore==1.0.5
-      - httptools==0.6.1
-      - httpx==0.27.0
-      - huggingface-hub==0.23.0
-      - idna==3.7
-      - imageio==2.34.1
-      - importlib_resources==6.4.0
-      - ipython==8.24.0
-      - ipywidgets==8.1.2
-      - jedi==0.19.1
-      - Jinja2==3.1.4
-      - joblib==1.4.2
-      - jsonschema==4.22.0
-      - jsonschema-specifications==2023.12.1
-      - jstyleson==0.0.2
-      - jupyterlab_widgets==3.0.10
-      - kiwisolver==1.4.5
-      - lazy_loader==0.4
-      - markdown-it-py==3.0.0
-      - MarkupSafe==2.1.5
-      - matplotlib-inline==0.1.7
-      - mdurl==0.1.2
-      - mpmath==1.3.0
-      - natsort==8.4.0
-      - networkx==3.3
-      - ninja==1.11.1.1
-      - nncf==2.10.0
-      - opencv-python-headless
-      - opencv-contrib-python
-      - openvino==2024.1.0
-      - openvino-telemetry==2024.1.0
-      - orjson==3.10.3
-      - packaging==24.0
-      - parso==0.8.4
-      - pillow==10.3.0
-      - prompt-toolkit==3.0.43
-      - psutil==5.9.8
-      - pure-eval==0.2.2
-      - pydantic==2.7.1
-      - pydantic_core==2.18.2
-      - pydot==2.0.0
-      - pydub==0.25.1
-      - pyee==11.1.0
-      - Pygments==2.18.0
-      - pymoo==0.6.1.1
-      - pyparsing==3.1.2
-      - python-dateutil==2.9.0.post0
-      - python-dotenv==1.0.1
-      - python-ffmpeg==2.0.12
-      - python-multipart==0.0.9
-      - pytz==2024.1
-      - PyYAML==6.0.1
-      - referencing==0.35.1
-      - requests==2.31.0
-      - rich==13.7.1
-      - rpds-py==0.18.1
-      - ruff==0.4.3
-      - scikit-image==0.23.2
-      - semantic-version==2.10.0
-      - shellingham==1.5.4
-      - six==1.16.0
-      - sniffio==1.3.1
-      - sshkeyboard==2.3.1
-      - stack-data==0.6.3
-      - starlette==0.37.2
-      - sympy==1.12
-      - tabulate==0.9.0
-      - threadpoolctl==3.5.0
-      - tifffile==2024.5.10
-      - tomlkit==0.12.0
-      - toolz==0.12.1
-      - torch==2.2.1
-      - torchvision==0.17.1
-      - tqdm==4.66.4
-      - traitlets==5.14.3
-      - typer==0.12.3
-      - typing_extensions==4.11.0
-      - tzdata==2024.1
-      - ujson==5.9.0
-      - urllib3==2.2.1
-      - uvicorn==0.29.0
-      - watchfiles==0.21.0
-      - wcwidth==0.2.13
-      - websockets==11.0.3
-      - widgetsnbextension==4.0.10
-      - wrapt==1.16.0
+      - ultralytics  # YOLO-related package
+      - flask-socketio  # Real-time socket connection
+      - aiofiles  # Async file handling
+      - alive-progress  # Progress bar utility
+      - ffmpeg-python  # FFmpeg wrapper for multimedia processing
+      - opencv-python-headless  # OpenCV for image processing
+      - opencv-contrib-python  # Additional OpenCV functionality
+      - pydantic  # Data validation and parsing
+      - python-dotenv  # Manage environment variables in .env files
+      - psutil  # For system resource management
+      - uvicorn  # ASGI server for running fast APIs
+      - requests  # HTTP requests
+      - tqdm  # Progress bars
+      - torch  # PyTorch for deep learning (YOLO)
+      - torchvision  # PyTorch vision utilities
