--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "child-process": "^1.0.2",
     "cloudinary": "^2.2.0",
     "cookie-parser": "^1.4.6",
@@ -16,8 +16,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
-    "fluent-ffmpeg": "^2.1.3",
     "ffmpeg-static": "^4.4.0",
+    "fluent-ffmpeg": "^2.1.3",
     "fs": "^0.0.1-security",
     "googleapis": "^134.0.0",
     "helmet": "^7.1.0",
