--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "nodemon": "^3.0.2",
     "socket.io": "^4.7.5",
     "stream": "^0.0.3",
-    "xlsx-populate": "^1.21.0"
+    "xlsx-populate": "^1.21.0",
+    "exceljs": "^4.3.0"
   }
 }
