--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "child_process": "^1.0.2",
     "child-process": "^1.0.2",
     "cloudinary": "^2.2.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
+    "exceljs": "^4.3.0",
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
     "ffmpeg-static": "^4.4.0",
@@ -34,7 +36,6 @@
     "nodemon": "^3.0.2",
     "socket.io": "^4.7.5",
     "stream": "^0.0.3",
-    "xlsx-populate": "^1.21.0",
-    "exceljs": "^4.3.0"
+    "xlsx-populate": "^1.21.0"
   }
 }
