--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "amarya-admin-backend-code",
   "type": "module",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
