--- a/Dockerfile.node
+++ b/Dockerfile.node
@@ -2,7 +2,8 @@
 FROM node:18-bullseye-slim
 
 # Install latest npm
-RUN npm i npm@latest -g
+# RUN npm i npm@latest -g
+# RUN apt-get update && apt-get install -y netcat
 
 # Set the working directory inside the container
 WORKDIR /app
